# techno

./: .gitignore  CLAUDE.md  DEPLOY.md  render.yaml
backend/: .env.example  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_sales_inventory.py  0003_after_sales_loyalty.py  0004_general_ledger.py  0005_cost_centers.py  0006_price_tiers.py  0007_item_units.py  0008_serials.py  0009_barcodes.py  0010_limits_batches.py  0010_manufacturing_bom.py  0011_credit_limits.py  0011_lookups.py  0012_production_reporting.py  0013_v4_quick_wins.py  0014_item_discount.py  0015_inspections.py  0016_inspection_custody.py  0017_inspection_review.py  0018_finance_vouchers.py  0019_treasuries_period_lock.py  0020_cheques.py  0021_tax_commissions.py  0022_inspection_customer.py  0023_inspection_item_types.py  0024_account_branch.py
backend/scripts/: bootstrap.py  check_contract_drift.py
backend/src/: main.py  seed.py
backend/src/api/: accounting.py  admin.py  audit.py  auth.py  catalog.py  cheques.py  cost_centers.py  coupons.py  customers.py  inspections.py  loyalty_settings.py  manufacturing.py  org.py  points.py  product_points.py  purchases.py  reports.py  sales.py  settings.py  settings_lookups.py  stock.py  suppliers.py  tax_commissions.py  transfers.py  treasury.py  users.py  vouchers.py  warehouses.py  wastage.py
backend/src/auth/: dependencies.py  rbac.py
backend/src/core/: config.py  db.py  hooks.py  money.py  security.py
backend/src/lib/: production.py  (+1 more)
backend/tests/: conftest.py
(+361 files in other folders)
